examples/kraken-example/public/templates/locales/US_en/errors/http_404.int
def header
  "File not found"
end

def description(url)
  "The URL"
  <code>url</code>
  "did not resolve to a route."
end
